platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_97.platter
start(){
        prepare piece of a(){}
}